--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -90,3 +90,13 @@
   border: 1px solid grey;
   padding: 8px 4px;
 }
+.hand-td {
+  height: 60px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+
+.td-cards {
+  height: 60px;
+}
