--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -69,15 +69,17 @@
             </tr>
 
             <tr>
-              <td>Best Hand</td>
-              <td style="display:flex;justify-content:center;align-items:center;"><%= @user.best_hand.game.name %></td>
-              <td><%= @user.best_hand.name %></td>
-              <td class="d-flex justify-content-between">
-                <% UserCard.where(user: @user, hand: @user.best_hand).each do |usercard| %>
-                  <div class="dashboard-usercard">
-                    <%= usercard.deck_card.name %>
-                  </div>
-                <% end %>
+              <td><div class="hand-td">Best Hand</div></td>
+              <td><div class="hand-td"><%= @user.best_hand.game.name %></td>
+              <td><div class="hand-td"><%= @user.best_hand.name %></div></td>
+              <td>
+                <div class="d-flex justify-content-between align-items-center td-cards">
+                  <% UserCard.where(user: @user, hand: @user.best_hand).each do |usercard| %>
+                    <div class="dashboard-usercard">
+                      <%= usercard.deck_card.name %>
+                    </div>
+                  <% end %>
+                </div>
               </td>
 
 
