--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,5 +1,5 @@
 .dashboard_card {
-  padding: 40px;
+  padding: 28px;
   background-color: rgb(214, 214, 214);
   color: white;
   border-radius: 8px;
@@ -71,12 +71,11 @@
 
 .pages-dashboard {
   background-image: linear-gradient(180deg, black, rgb(1, 76, 1));
-  height: 100vh;
 }
 
 #general_info_card {
   margin-bottom: 20px;
-  padding: 40px 40px 26px 40px;
+  padding: 28px 40px 26px 28px;
   p {
     color: rgb(90, 90, 90);
   }
@@ -88,7 +87,9 @@
 
 .dashboard-usercard {
   border: 1px solid grey;
-  padding: 8px 4px;
+  padding: 8px 2px;
+  font-size: 10px;
+  margin: 1px;
 }
 .hand-td {
   height: 60px;
@@ -99,4 +100,9 @@
 
 .td-cards {
   height: 60px;
+}
+
+.td-title {
+  color: grey;
+  font-variant-caps: petite-caps;
 }
