--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -171,7 +171,11 @@
                   <% end %>
                 </div>
               </td>
-              <td><div class="hand-td"><%= @user.hands.last.pot %>€</div></td>
+              <% if @user.hands.last.game.hands[(@user.hands.last.game.hands.find_index(@user.hands.last) - 1)].remainder %>
+                <td><div class="hand-td"><%= @user.hands.last.pot + @user.hands.last.game.hands[(@user.hands.last.game.hands.find_index(@user.hands.last) - 1)].remainder %>€</div></td>
+              <% else %>
+                <td><div class="hand-td"><%= @user.hands.last.pot %>€</div></td>
+              <% end %>
               <% if @last_hand_win_amount %>
                 <td><div class="hand-td positive-score">+<%= @last_hand_win_amount %>€</div></td>
               <% elsif @last_hand_loss_amount %>
