--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -90,7 +90,7 @@
               <% end %>
             </div>
           <% elsif @in_hand_players.include?(user) %>
-            <% if @current_hand.better == nil && (@in_hand_players_card_count == @in_hand_players.count * 2 || @in_hand_players_card_count == @in_hand_players.count * 4 ) %>
+            <% if @current_hand.better == nil && (@current_hand.name == "Texas" || @current_hand.name == "Omaha 4" || @current_hand.name == "Omaha 5" || (@current_hand.name == "Pineapple" && UserCard.where(hand: @current_hand).count == @in_hand_players.count * 2) || (@current_hand.name == "Sutra" && UserCard.where(hand: @current_hand).count == @in_hand_players.count * 2 && @current_hand.turn_cards.count == 1)) %>
               <div class="text-center d-flex justify-content-center">
                 <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-1-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
                 <%= image_tag "#{@current_hand.user_cards.where(user: user)[1].deck_card.url}", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
@@ -106,16 +106,16 @@
               </div>
             <% else %>
               <div class="text-center d-flex justify-content-center">
-                <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-1-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
-                <%= image_tag "#{@current_hand.user_cards.where(user: user)[1].deck_card.url}", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
+                <%= image_tag "card_back.png", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-1-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
+                <%= image_tag "card_back.png", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
                <% if @current_hand.user_cards.where(user: user).count >= 3 %>
-                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[2].deck_card.url}", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-3-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
+                  <%= image_tag "card_back.png", class: "user-cards-3 #{'card-3-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-3-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
                 <% end %>
                 <% if @current_hand.user_cards.where(user: user).count >= 4 %>
-                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[3].deck_card.url}", class: "user-cards-4" %>
+                  <%= image_tag "card_back.png", class: "user-cards-4" %>
                 <% end %>
                 <% if @current_hand.user_cards.where(user: user).count >= 5 %>
-                  <%= image_tag "#{@current_hand.user_cards.where(user: user)[4].deck_card.url}", class: "user-cards-5" %>
+                  <%= image_tag "card_back.png", class: "user-cards-5" %>
                 <% end %>
               </div>
             <% end %>
