--- a/app/assets/stylesheets/components/_game-infos.scss
+++ b/app/assets/stylesheets/components/_game-infos.scss
@@ -13,6 +13,7 @@
 
 .game-infos-right {
   margin-bottom: 40px;
+  height: fit-content;
   text-align: center;
   color: white;
   border: 1px solid black;
