--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -33,12 +33,12 @@
         <% if @game.hands.count == 0 || @game.hands.count == 1 %>
           <p><%= @game.hands.count %> hand played</p>
         <% else %>
-          <p><%= @game.hands.count %> hands played</p>
+          <div class="mb-2"><%= @game.hands.count %> hands played</div>
         <% end %>
       </div>
-      <% if @game.hand_limit == 100000 || @game.hand_limit == nil  %>
+      <% if (@game.hand_limit == 100000 || @game.hand_limit == nil) && @current_hand.river_cards.count == 1  %>
         <%= link_to "Last 10 hands", game_path(@game), method: :put, class: "btn btn-leave", :data => {:confirm => 'Are you sure that you want to stop the game in 10 hands ?'} %>
-      <% else %>
+      <% elsif @game.hand_limit != 100000 %>
         <% if @game.hand_limit - @game.hands.count > 1 %>
           <span>🚨 <%= @game.hand_limit - @game.hands.count %> hands left 🚨</span>
         <% elsif @game.hand_limit - @game.hands.count == 1 && @game.hands.where(game: @game).last.river_cards.count == 0 %>
@@ -61,17 +61,17 @@
         <% end %>
       <% end %>
       <% if @active_players.count == 2 && player_position == 1 %>
-        <% player_position == 3 %>
+        <% player_position = 3 %>
       <% elsif @active_players.count == 3 && player_position == 1  %>
-        <% player_position == 2 %>
+        <% player_position = 2 %>
       <% elsif @active_players.count == 3 && player_position == 2  %>
-        <% player_position == 4 %>
+        <% player_position = 4 %>
       <% elsif @active_players.count == 4 && player_position == 1  %>
-        <% player_position == 2 %>
+        <% player_position = 2 %>
       <% elsif @active_players.count == 4 && player_position == 2  %>
-        <% player_position == 3 %>
+        <% player_position = 3 %>
       <% elsif @active_players.count == 4 && player_position == 3  %>
-        <% player_position == 4 %>
+        <% player_position = 4 %>
       <% end %>
       <div class="player-infos position-<%=player_position%>">
         <div class="player-cards-wrapper">
