--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -55,6 +55,7 @@
 
 .dashboard_button:hover {
   margin-top: 20px;
+  color: white;
   background-color: #e53434;
   border: none;
   border-radius: 8px;
