--- a/app/assets/stylesheets/components/_poker-table.scss
+++ b/app/assets/stylesheets/components/_poker-table.scss
@@ -391,3 +391,17 @@ height: 22px;
 .inner-table-wrapper {
   margin-top: -40px;
 }
+
+.user-not-signed-in-text {
+  margin-top: 200px;
+  padding: 20px;
+  background-color: white;
+  border-radius: 5px;
+  width: fit-content;
+}
+
+.user-not-signed-in-text-wrapper {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
