--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -72,6 +72,7 @@
 
 .pages-dashboard {
   background-image: linear-gradient(180deg, black, rgb(1, 76, 1));
+  height: 120vh;
 }
 
 #general_info_card {
