--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -14,14 +14,17 @@
               <% reservation_idd = Reservation.all.where(user_id: current_user.id, game_id: @game.id).to_a[0].id %>
               <%# <%= link_to "Leave Game", game_reservation_path(@game, reservation_idd), method: :delete, class: "btn btn-danger" %>
               <% if @game.reservations.where(user_id: current_user.id)[0].active %>
-                <% if @current_hand && @current_hand.river_cards.count == 1 %>
+                <% if @current_hand && (@current_hand.river_cards.count == 1 || @current_hand.hand_winners.count > 0) %>
                   <%= link_to "Leave the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-leave" %>
                 <% elsif @current_hand %>
                   <div class="btn btn-progress">Hand in progress...</div>
                 <% end %>
-
               <% else %>
-                <%= link_to "Re-join the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-flat" %>
+                <% if @current_hand && (@current_hand.river_cards.count == 1 || @current_hand.hand_winners.count > 0) %>
+                  <%= link_to "Re-join the Game", game_reservation_path(@game, reservation_idd), method: :put, class: "btn btn-flat" %>
+                <% elsif @current_hand %>
+                  <div class="btn btn-progress">Hand in progress...</div>
+                <% end %>
               <% end %>
             <% end %>
           </div>
@@ -95,7 +98,7 @@
                 <% end %>
               </div>
             <% elsif @in_hand_players.include?(user) %>
-              <% if @current_hand.better == nil && (@current_hand.name == "Texas" || @current_hand.name == "Omaha 4" || @current_hand.name == "Omaha 5" || (@current_hand.name == "Pineapple" && UserCard.where(hand: @current_hand).count == @in_hand_players.count * 2) || (@current_hand.name == "Sutra" && UserCard.where(hand: @current_hand).count == @in_hand_players.count * 2 && @current_hand.turn_cards.count == 1)) %>
+              <% if @current_hand.better == nil && (@current_hand.name == "Texas" || @current_hand.name == "Omaha 4" || @current_hand.name == "Omaha 5" || (@current_hand.name == "Pineapple" && UserCard.where(hand: @current_hand).count == @in_hand_players.count * 2) || (@current_hand.name == "Sutra" && UserCard.where(hand: @current_hand).count == @in_hand_players.count * 2 && @current_hand.turn_cards.count == 1)) && (@in_hand_players.count > 1) %>
                 <div class="text-center d-flex justify-content-center">
                   <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-1-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
                   <%= image_tag "#{@current_hand.user_cards.where(user: user)[1].deck_card.url}", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4}" %>
@@ -212,9 +215,9 @@
             </div>
           </div>
         <% end %>
-        <% if @game.users.include?(current_user) %>
+        <% if @game.users.include?(current_user) && @active_players.count > 1 %>
           <div class="buttons d-flex justify-content-center">
-            <% if (@game.hand_limit - 1 > @game.hands.count && @next_button == current_user && @current_hand.river_cards.count == 1) || @game.hands.count == 0 %>
+            <% if (@game.hand_limit - 1 > @game.hands.count && @next_button == current_user && (@current_hand.river_cards.count == 1 || @current_hand.hand_winners.count > 0)) || @game.hands.count == 0 %>
               <%= simple_form_for [@game, @hand] do |f| %>
                 <%= f.hidden_field :name, :value => "Texas" %>
                 <%= f.submit "Texas", class: "dealing-button" %>
@@ -238,7 +241,7 @@
             <% else %>
               <div class="invisible-button"></div>
             <% end %>
-            <% if @current_hand && @current_hand.button == current_user && @current_hand.better == nil %>
+            <% if @current_hand && @current_hand.button == current_user && @current_hand.better == nil && @current_hand.hand_winners.count == 0 %>
               <% if @current_hand.flop_cards.count == 0 %>
                 <%= simple_form_for [@game, @current_hand, @flop_card] do |f| %>
                   <%= f.submit "Deal flop", class: "dealing-button" %>
