--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -106,8 +106,8 @@
                               placeholder: "••••••••••" %>
                   <%= f.input :photo, as: :file, id: "file1", name: "file1", style:"display:none",
                               label: "Upload a picture of you..." %>
+                  <%= f.input :best_hand, as: :hidden, :input_html => { :value => Hand.last } %>
                 </div>
-
                 <div class="sign_up_errors"></div>
                 <div class="form-actions">
                   <%= f.button :submit, "Sign up", class: "signup-button" %>
