--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PreflopPoker</title>
+    <title>PREFLOP</title>
+    <link rel="shortcut icon" href="images/favicon.ico"/>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
