--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <%= favicon_link_tag %>
     <title>PREFLOP</title>
     <link rel="shortcut icon" href="images/favicon.ico"/>
     <%= csrf_meta_tags %>
