--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,7 @@
 
         <li class="nav-item dropdown">
           <% if current_user.photo.attached? %>
-            <%= cl_image_tag current_user.photo.key, crop: :thumb, class: "user-pic dropdown-toggle", data: {bs_toggle: "dropdown"}, 'aria-haspopup': true, 'aria-expanded': false %>
+            <%= cl_image_tag current_user.photo.key, format: :png, crop: :thumb, class: "user-pic dropdown-toggle", data: {bs_toggle: "dropdown"}, 'aria-haspopup': true, 'aria-expanded': false %>
           <% else %>
             <%= image_tag "sam_photo.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% end %>
