--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -83,7 +83,7 @@
         <% end %>
         <div class="player-infos position-<%=player_position%>">
           <div class="player-cards-wrapper">
-            <% if (user == @user && @in_hand_players.include?(user)) %>
+            <% if (user == @user && @in_hand_players.include?(user)) && @current_hand.user_cards.where(user: @user).count > 0 %>
               <div class="text-center d-flex justify-content-center">
                 <%= image_tag "#{@current_hand.user_cards.where(user: @user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: @user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: @user).count == 4} #{'card-1-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
                 <%= image_tag "#{@current_hand.user_cards.where(user: @user)[1].deck_card.url}", class: "user-cards-2 #{'card-2-deviation-o4' if @current_hand.user_cards.where(user: @user).count == 4}" %>
@@ -97,7 +97,7 @@
                   <%= image_tag "#{@current_hand.user_cards.where(user: @user)[4].deck_card.url}", class: "user-cards-5" %>
                 <% end %>
               </div>
-            <% elsif @in_hand_players.include?(user) %>
+            <% elsif @in_hand_players.include?(user) && @current_hand.user_cards.where(user: @user).count > 0 %>
               <% if @current_hand.better == nil && (@current_hand.name == "Texas" || @current_hand.name == "Omaha 4" || @current_hand.name == "Omaha 5" || (@current_hand.name == "Pineapple" && @in_hand_players_card_count == @in_hand_players.count * 2) || (@current_hand.name == "Sutra" && @in_hand_players_card_count == @in_hand_players.count * 2 && @current_hand.turn_cards.count == 1)) && (@in_hand_players.count > 1) %>
                 <div class="text-center d-flex justify-content-center">
                   <%= image_tag "#{@current_hand.user_cards.where(user: user)[0].deck_card.url}", class: "user-cards-1 #{'card-1-deviation' if @current_hand.user_cards.where(user: user).count == 3} #{'card-1-deviation-o4' if @current_hand.user_cards.where(user: user).count == 4} #{'card-1-deviation-o5' if @current_hand.user_cards.where(user: user).count == 5}" %>
