--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -34,19 +34,19 @@
       <div class="game-infos-right">
         <div>
           <h6 class="mb-3"><%= @game.sb_amount %>€/<%= @game.bb_amount %>€/<%= @game.max_bet_amount %>€</h6>
-          <% if @game.hands.count == 0 || @game.hands.count == 1 %>
-            <p><%= @game.hands.count %> hand played</p>
+          <% if @game.hand_count == 0 || @game.hand_count == 1 %>
+            <p><%= @game.hand_count %> hand played</p>
           <% else %>
-            <div class="mb-2"><%= @game.hands.count %> hands played</div>
+            <div class="mb-2"><%= @game.hand_count %> hands played</div>
           <% end %>
         </div>
         <% if @current_hand %>
           <% if (@game.hand_limit == 100000 || @game.hand_limit == nil) && @current_hand.river_cards.count == 1  %>
             <%= link_to "Last 10 hands", game_path(@game), method: :put, class: "btn btn-leave", :data => {:confirm => 'Are you sure that you want to stop the game in 10 hands ?'} %>
           <% elsif @game.hand_limit != 100000 %>
-            <% if @game.hand_limit - @game.hands.count > 1 %>
-              <span>🚨 <%= @game.hand_limit - @game.hands.count %> hands left 🚨</span>
-            <% elsif @game.hand_limit - @game.hands.count == 1 && @game.hands.where(game: @game).last.river_cards.count == 0 %>
+            <% if @game.hand_limit - @game.hand_count > 1 %>
+              <span>🚨 <%= @game.hand_limit - @game.hand_count %> hands left 🚨</span>
+            <% elsif @game.hand_limit - @game.hand_count == 1 && @game.hands.where(game: @game).last.river_cards.count == 0 && @game.hands.where(game: @game).last.hand_winners.empty? %>
               <span>🚨 LAST HAND 🚨</span>
             <% else %>
               <span>⛔️ Game over ! ⛔️</span>
@@ -217,7 +217,7 @@
         <% end %>
         <% if @game.users.include?(current_user) && @active_players.count > 1 %>
           <div class="buttons d-flex justify-content-center">
-            <% if (@game.hand_limit - 1 > @game.hands.count && @next_button == current_user && (@current_hand.river_cards.count == 1 || @current_hand.hand_winners.count > 0)) || @game.hands.count == 0 %>
+            <% if (@game.hand_limit - 1 > @game.hand_count && @next_button == current_user && (@current_hand.river_cards.count == 1 || @current_hand.hand_winners.count > 0)) || @game.hand_count == 0 %>
               <%= simple_form_for [@game, @hand] do |f| %>
                 <%= f.hidden_field :name, :value => "Texas" %>
                 <%= f.submit "Texas", class: "dealing-button" %>
