--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -6,7 +6,13 @@
         <% if @user.photo.attached? %>
           <%= cl_image_tag @user.photo.key, format: :jpg, width: "200px", height: "200px", class: "user-image-dashboard" %>
         <% else %>
-          <%= image_tag "sam_photo.png", width: "200px", height: "200px", class: "user-image-dashboard" %>
+          <% if @user.pseudo == "raphbg97" %>
+            <%= image_tag "raph_photo.png", width: "200px", height: "200px", class: "user-image-dashboard" %>
+          <% elsif @user.pseudo == "jer" %>
+            <%= image_tag "jer_photo.png", width: "200px", height: "200px", class: "user-image-dashboard" %>
+          <% else %>
+            <%= image_tag "sam_photo.png", width: "200px", height: "200px", class: "user-image-dashboard" %>
+          <% end %>
         <% end %>
         <table class="table" id="information_table">
           <tr>
@@ -45,7 +51,7 @@
                 <p>Your total revenue is <span class="<%= 'positive-score' if @user_revenue > 0 %> <%= 'negative-score' if @user_revenue < 0 %>"><%= @user_revenue %>€</span> !</p>
               </div>
               <div>
-                <p>Players have played a total of <%= @total_money_played - 20 %>€.</p>
+                <p>Players have played a total of <%= @total_money_played - 20 - 117 %>€.</p>
                 <% if @biggest_winner == @user %>
                   <p>The biggest winner is <strong>you</strong> <span class="positive-score">(<%= @biggest_score %>€)</span>.</p>
                 <% else %>
